--- a/mediaAluno/style.css
+++ b/mediaAluno/style.css
@@ -1,10 +1,14 @@
 h1{
     font-family: 'Dancing Script', cursive;
 font-family: 'Yeseva One', cursive;
+
+
+
+
 }
 
 p {
-    background-color: #dfd7d7;
+    background-color: #737272;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     padding: 16px; 
     
